API refactoring - ValueAction
Add communityId to ValueAction, refactor field names
