# verity-server/spring-boot-server/springServer/src/main/java/io/swagger/api/ValueactionApi.java
@@ -2,7 +2,7 @@ package io.swagger.api;
 
 import io.swagger.model.InlineResponse403;
 import io.swagger.model.InlineResponse404;
-import io.swagger.model.Valueaction;
+import io.swagger.model.ValueAction;
 
 import io.swagger.annotations.*;
 import org.springframework.http.ResponseEntity;
@@ -40,33 +40,33 @@ public interface ValueactionApi {
 );
 
 
-    @ApiOperation(value = "create ValueAction", notes = "", response = Valueaction.class, tags={ "ValueAction", })
+    @ApiOperation(value = "create ValueAction", notes = "", response = ValueAction.class, tags={ "ValueAction", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 201, message = "", response = Valueaction.class),
-        @ApiResponse(code = 401, message = "", response = Valueaction.class),
-        @ApiResponse(code = 403, message = "", response = Valueaction.class),
-        @ApiResponse(code = 404, message = "", response = Valueaction.class),
-        @ApiResponse(code = 409, message = "", response = Valueaction.class),
-        @ApiResponse(code = 422, message = "", response = Valueaction.class),
-        @ApiResponse(code = 500, message = "", response = Valueaction.class) })
+        @ApiResponse(code = 201, message = "", response = ValueAction.class),
+        @ApiResponse(code = 401, message = "", response = ValueAction.class),
+        @ApiResponse(code = 403, message = "", response = ValueAction.class),
+        @ApiResponse(code = 404, message = "", response = ValueAction.class),
+        @ApiResponse(code = 409, message = "", response = ValueAction.class),
+        @ApiResponse(code = 422, message = "", response = ValueAction.class),
+        @ApiResponse(code = 500, message = "", response = ValueAction.class) })
     @RequestMapping(value = "/valueaction",
         produces = { "application/json" }, 
         consumes = { "application/json" },
         method = RequestMethod.POST)
-    ResponseEntity<Valueaction> createValueAction(
+    ResponseEntity<ValueAction> createValueAction(
 
-@ApiParam(value = ""  ) @RequestBody Valueaction body
+@ApiParam(value = ""  ) @RequestBody ValueAction body
 
 );
 
 
-    @ApiOperation(value = "get ValueAction", notes = "", response = Valueaction.class, tags={ "ValueAction", })
+    @ApiOperation(value = "get ValueAction", notes = "", response = ValueAction.class, tags={ "ValueAction", })
     @ApiResponses(value = { 
-        @ApiResponse(code = 200, message = "", response = Valueaction.class) })
+        @ApiResponse(code = 200, message = "", response = ValueAction.class) })
     @RequestMapping(value = "/valueaction/{uuid}",
         produces = { "application/json" }, 
         method = RequestMethod.GET)
-    ResponseEntity<Valueaction> getValueAction(
+    ResponseEntity<ValueAction> getValueAction(
 @ApiParam(value = "",required=true ) @PathVariable("uuid") String uuid
 
 
@@ -87,7 +87,7 @@ public interface ValueactionApi {
         method = RequestMethod.PUT)
     ResponseEntity<Void> updateValueAction(
 
-@ApiParam(value = ""  ) @RequestBody Valueaction body
+@ApiParam(value = ""  ) @RequestBody ValueAction body
 
 );
 
