# verity-server/spring-boot-server/springServer/src/main/java/io/swagger/persistence/dao/IValueActionDao.java
@@ -2,8 +2,8 @@ package io.swagger.persistence.dao;
 
 import org.baeldung.persistence.dao.common.IOperations;
 
-import io.swagger.model.Valueaction;
+import io.swagger.model.ValueAction;
 
-public interface IValueActionDao extends IOperations<Valueaction> {
+public interface IValueActionDao extends IOperations<ValueAction> {
 
 }
