# verity-server/spring-boot-server/springServer/src/main/java/io/swagger/persistence/dao/impl/ValueActionDao.java
@@ -3,16 +3,16 @@ package io.swagger.persistence.dao.impl;
 import org.baeldung.persistence.dao.common.AbstractHibernateDao;
 import org.springframework.stereotype.Repository;
 
-import io.swagger.model.Valueaction;
+import io.swagger.model.ValueAction;
 import io.swagger.persistence.dao.IValueActionDao;
 
 @Repository
-public class ValueActionDao extends AbstractHibernateDao<Valueaction> implements IValueActionDao {
+public class ValueActionDao extends AbstractHibernateDao<ValueAction> implements IValueActionDao {
 
     public ValueActionDao() {
         super();
 
-        setClazz(Valueaction.class);
+        setClazz(ValueAction.class);
     }
 
     // API
