# verity-server/spring-boot-server/springServer/src/main/java/io/swagger/persistence/service/IValueActionService.java
@@ -1,9 +1,9 @@
 package io.swagger.persistence.service;
 
 import org.baeldung.persistence.dao.common.IOperations;
-import io.swagger.model.Valueaction;
+import io.swagger.model.ValueAction;
 
-public interface IValueActionService extends IOperations<Valueaction>{
+public interface IValueActionService extends IOperations<ValueAction>{
 
 	void setArchiveBit(String uuid);
 
