# verity-server/spring-boot-server/springServer/src/main/java/io/swagger/persistence/service/impl/ValueActionService.java
@@ -7,14 +7,14 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Service;
 
 import io.swagger.model.Transaction;
-import io.swagger.model.Valueaction;
+import io.swagger.model.ValueAction;
 import io.swagger.persistence.dao.ITransactionDao;
 import io.swagger.persistence.dao.IValueActionDao;
 import io.swagger.persistence.service.ITransactionService;
 import io.swagger.persistence.service.IValueActionService;
 
 @Service
-public class ValueActionService extends AbstractService<Valueaction> implements IValueActionService {
+public class ValueActionService extends AbstractService<ValueAction> implements IValueActionService {
 
     @Autowired
     private IValueActionDao dao;
@@ -26,14 +26,14 @@ public class ValueActionService extends AbstractService<Valueaction> implements 
     // API
 
     @Override
-    protected IOperations<Valueaction> getDao() {
+    protected IOperations<ValueAction> getDao() {
         return dao;
     }
 
 	@Override
 	public void setArchiveBit(String uuid) {
 		//TODO: could be more efficient with a SQL update
-		Valueaction v = this.findByUuid(uuid);
+		ValueAction v = this.findByUuid(uuid);
 		if(v == null) throw new RuntimeException("ValueAction not found");
 		v.setArchived(true);
 		this.update(v);
